--- a/local/templates/main/assets/css/style.css
+++ b/local/templates/main/assets/css/style.css
@@ -1420,7 +1420,7 @@ html, body, .bd-site { height: 100%; }
 	width: 40px;
 	height: 40px;
 	margin: 0 10px;
-	border: 1px rgba(215, 41, 34, 0.75) solid;
+	border: 1px #B22513; solid;
 	border-radius: 10px;
 	color: black;
 }
@@ -1428,5 +1428,6 @@ html, body, .bd-site { height: 100%; }
 .pagination__link:hover,
 .pagination__link_active {
 	color: #fff;
-	background: rgba(215, 41, 34, 0.75);
+	background: #B22513;;
+	text-decoration: none;
 }
