--- a/local/templates/main/assets/css/style.css
+++ b/local/templates/main/assets/css/style.css
@@ -1433,3 +1433,8 @@ html, body, .bd-site { height: 100%; }
 	background: #B22513;;
 	text-decoration: none;
 }
+
+div[id^="wait_"] {
+	display:none !important;
+}
+
