--- a/local/templates/main/assets/css/media.css
+++ b/local/templates/main/assets/css/media.css
@@ -1,5 +1,5 @@
 /* Планшет */
-@media only screen and (max-width : 1200px) {
+@media  screen and (max-width : 1200px) {
 	/* START style */
 	.container {width: 754px;}
 	/* Шапка */
@@ -98,6 +98,7 @@
 		background-size: cover;
 	}
 	.mobile-aside__nav__close,
+	.filter-close,
 	.mobile-aside__contact__close {
 		font-family: "RobotoMedium";
 		font-size: 13px;
@@ -108,6 +109,7 @@
 		cursor: pointer;
 	}
 	.mobile-aside__nav__close i,
+	filter-close i,
 	.mobile-aside__contact__close i {
 		display: block;
 		margin-right: 12px;
@@ -889,6 +891,7 @@ margin-bottom: 7px;}
 		display: inline-block;
 		font-family: "RobotoMedium";
 		font-size: 14px;
+		width: auto;
 	}
 	.mobile-filter-active .btn.appruve span {display: inline-block;}
 	.mobile-filter-active .btn.appruve span:after {
